--- a/style.css
+++ b/style.css
@@ -176,3 +176,28 @@ footer {
     flex-direction: column;
     text-align: center;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--background-color);
+    color: var(--font-color);
+    height: 100%;
+    width: 100%;
+}
+
+#progress-bar {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 5px;
+    background-color: var(--list-item-background);
+}
+
+#progress {
+    height: 100%;
+    background-color: var(--primary-color);
+}
