--- a/style.css
+++ b/style.css
@@ -17,17 +17,31 @@ body {
 }
 
 #hero {
-    background: url('hero.png') no-repeat center center/cover;
+    background: linear-gradient(135deg, var(--accent-color), var(--primary-color), var(--secondary-color), var(--secondary-accent-color));
     height: 100vh;
     display: flex;
+    flex-direction: column;
     color: #fff;
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
+    position: relative;
+}
+
+#scroll-down {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 #hero-content {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.1);
     width: max-content;
     max-width: calc(100% - 120px);
     padding: 20px;
@@ -57,7 +71,7 @@ body {
     background: rgba(0, 0, 0, 0.5);
     padding: 10px;
     border-radius: 10px;
-    transform: perspective(1000px) rotateY(-20deg);
+    transform: perspective(1000px) rotateY(-15deg);
 }
 
 #hero #demo-preview img {
