--- a/style.css
+++ b/style.css
@@ -242,3 +242,25 @@ footer {
 #copy-button {
     margin-bottom: 20px;
 }
+
+#youtube-videos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 20px auto;
+
+    .youtube-video {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        flex-grow: 1;
+        width: fit-content;
+
+        iframe {
+            max-width: 100%;
+        }
+    }
+}
