--- a/style.css
+++ b/style.css
@@ -239,7 +239,8 @@ footer {
     background-color: var(--primary-color);
 }
 
-#copy-button {
+#copy-button,
+#record-video-button {
     margin-bottom: 20px;
 }
 
