--- a/style.css
+++ b/style.css
@@ -26,6 +26,17 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     position: relative;
+
+    a.cta-btn {
+        position: relative;
+        color: #fff;
+        text-decoration: none;
+        font-weight: 700;
+        padding: 10px 20px;
+        margin: 20px auto;
+        border-radius: 5px;
+        background-color: var(--accent-color);
+    }
 }
 
 #scroll-down {
@@ -99,6 +110,13 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+
+    #hero {
+        a.cta-btn {
+            margin-top: 100px;
+            font-size: 0.8rem;
+        }
+    }
 
     #hero p,
     #hero small {
